# Boilerplate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bandit.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_auth_audit.py
app/: main.py
app/adapters/: __init__.py
app/adapters/cache/: idempotency.py  rate_limiter.py  store.py
app/adapters/http/: __init__.py  dependencies.py  exception_handlers.py  response.py
app/adapters/persistence/: __init__.py  unit_of_work.py
app/application/: __init__.py
app/application/auth/: __init__.py  dto.py  login.py  register.py
app/application/users/: __init__.py  dto.py  get_me.py
app/common/: __init__.py  constants.py  response_envelope.py
app/core/: __init__.py  config.py  context.py  logging.py  security.py
app/core/middleware/: __init__.py  logging.py  request_id.py  security_headers.py
app/domain/: __init__.py  base.py  clock.py
app/infrastructure/: __init__.py  audit_handler.py  clock.py  db.py  event_bus.py  redis.py
docs/: WORKFLOWS.md  architecture.md
docs/adr/: 000-template.md  001-fastapi-vs-django.md  002-sqlalchemy-async.md  003-ulid-vs-uuid.md  004-redis-optional.md  005-soft-delete-optional.md  006-uv-vs-poetry.md  007-jwt-hs256-refresh.md
docs/guides/: add-endpoint.md  add-entity.md  add-error-code.md  add-migration.md  enable-opentelemetry.md  enable-redis.md  enable-soft-delete.md
tests/: conftest.py  test_health.py
tests/contract/: test_envelope.py  test_headers.py  test_idempotency.py  test_rate_limit.py
(+29 files in other folders)
